# TRACE

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  NOTICE  QUICK_SETUP.md  README.md  SECURITY.md  TRACE_PROTOCOL.md  TRACE_UPDATE_PROPOSAL.md  USER_GUIDE.md  environment.yml  paper.bib  paper.md  pyproject.toml  pyrightconfig.json  server.json  trace.json  trace_protocol_changes_preview.md
.claude/: compact-context.md  settings.json
.claude/hooks/: post-edit-lint.sh
.claude/rules/: manuscript.md  python-quality.md
.claude/skills/lit-audit/: SKILL.md
.github/: pull_request_template.md
.github/actions/build-and-verify-dist/: action.yml
.github/workflows/: ci.yml  release.yml
.trace/: chain.json
audit_2026-05-13_waggle_session/: audit_methodology.md  claude_code_jsonl_transcript.jsonl  trace_audit_findings.md  trace_audit_remediation_plan.md  trace_scratchpad.md  trace_v1_FINAL_fix_plan.md  trace_v1_proposed_fix_plan.md  trace_v1_release_checklist.html  trace_v1_round3_amendments.md
docs/: INVARIANTS.md  TRACE_MVP_ANALYSIS.md  TRACE_MVP_REFACTOR_PLAN.md  auto-start-failure-analysis-2026-04-13.md  claude-code-skill.md  embeddings.md  examples.md  maintenance.md  specification.md  upstream-claude-code-thinking-block-400.md
docs/adr/: 001-trace-auto-start.md  002-v041-protocol-additions.md  003-core-extension-boundary.md  004-telemetry-sidecar.md  README.md
docs/extensions/: trace-learn.md
examples/: example_trace.json
mcp_server/: analysis.py  server.py  trace.json
mcp_server/core/: __init__.py  environment.py  evaluation.py  metrics.py  types.py
mcp_server/ext/: __init__.py
mcp_server/ext/claude/: __init__.py
mcp_server/ext/knowledge/: __init__.py
mcp_server/ext/reports/: __init__.py
mcp_server/vv/: __init__.py  git_reconcile.py  integrity.py  reports.py  snapshots.py  text_analysis.py  trust_metrics.py  verification.py
review_2026-05-18_v041_status/: final_review2_1_correctness.md  final_review2_2_completeness.md  final_review2_3_reliability.md  final_review3_1_correctness.md  final_review3_2_completeness.md  final_review3_3_reliability.md  final_review_1_correctness.md  final_review_2_completeness.md  final_review_3_reliability.md  round1_A_engineering_reality.md  round1_B_edge_cases.md  round1_C_adoption_boundary.md  round1_SYNTHESIS.md  round2_correctness.md  round2_exhaustiveness.md  round2_scope_bloat.md  round3_adoption_downstream.md  round3_amendments.md  round3_edge_cases.md  round3_engineering_reality.md  round_FINAL_plan.md
schema/: trace-core.schema.json  trace-extensions.schema.json
schemas/: trace-v0.1.json  trace-v0.2.json  trace-v0.3.json  trace-v0.4.json
scripts/: batch_proxy_download.py  browser_batch.py  browser_download.py  download_fulltext.py  fix_data_quality.py  generate_schema.py  migrate_v1_to_v01.py  retroactive_enrich.py  retroactive_enrich_v1.py  validate_session.py
skill/: TRACE.md
src/: sitecustomize.py
src/trace_mcp/: __init__.py  extension_hooks.py  extension_status.py  hooks.py  init_project.py  scratchpad.py  selfcost.py  server.py  validate.py
src/trace_mcp/adapters/: __init__.py  base.py
src/trace_mcp/adapters/claude_code/: __init__.py
src/trace_mcp/adapters/claude_code/assets/: CLAUDE_BLOCK.md  settings_template.json
src/trace_mcp/adapters/claude_code/assets/hooks/: decision-audit.sh  pretool-guard.sh  prompt-reminder.sh  session-reminder.sh
src/trace_mcp/adapters/codex/: README.md  __init__.py
src/trace_mcp/exporters/: __init__.py  markdown_export.py  prov_jsonld.py
src/trace_mcp/extensions/: __init__.py
src/trace_mcp/extensions/evolve/: __init__.py  fitness.py  models.py  selection.py  store.py
src/trace_mcp/extensions/learn/: __init__.py  config.py  egress.py  embeddings.py  extraction.py  matching.py  models.py  store.py
src/trace_mcp/schema/: __init__.py  events.py  prov_mapping.py  session.py
src/trace_mcp/schemas/: trace-v0.4.json
src/trace_mcp/storage/: __init__.py  base.py  json_file.py  locked.py
src/trace_mcp/tools/: __init__.py  decision_tools.py  export_tools.py  logging_tools.py  query_tools.py  session_tools.py
tests/: conftest.py  test_adapter_hooks.py  test_adapters.py  test_decision_guards.py  test_decision_guards_e2e.py  test_decision_integrity.py  test_e2e_server.py  test_egress_ledger.py  test_env_isolation.py  test_evolve.py  test_exporters.py  test_failure_modes_e2e.py  test_hardening_e2e.py  test_installation_health.py  test_integrity_hardening.py  test_invariants.py  test_knowledge_metrics.py  test_learn.py  test_learn_decay.py  test_learn_dedup.py  test_learn_e2e.py  test_learn_embeddings.py  test_learn_embeddings_e2e.py  test_learn_embeddings_integration.py  test_learn_extraction.py  test_learn_matching.py  test_learn_models.py  test_learn_recall_layers.py  test_learn_store.py  test_learning_extraction_provenance.py  test_llm_optin_default.py  test_local_embedding_backends.py  test_local_only_kill_switch.py  test_packaging_artifacts.py  test_readme_pypi.py  test_schema.py  test_selfcost.py  test_specification_conformance.py  test_storage.py  test_tools.py  (+18 more)
tests/fixtures/: waggle_session_2026-05-13.json
tests/test_trace_vv/: __init__.py  test_git_reconcile.py  test_integrity.py  test_snapshots.py  test_text_specific.py  test_verification.py
