[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trace-mcp"
version = "0.4.1"
description = "TRACE: Transparent Recording of AI-assisted Collaboration Experiments — MCP audit protocol for scientific workflows"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
]
embeddings = [
    "numpy>=1.24",
    "model2vec>=0.4",
    "filelock>=3.12",
]
all = [
    "openai>=1.0",
    "numpy>=1.24",
    "model2vec>=0.4",
    "filelock>=3.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1.350",
    "openai>=1.0",
    "numpy>=1.24",
    "model2vec>=0.4",
    "filelock>=3.12",
    "jsonschema>=4.0",
    "rdflib>=7.0",
]

[project.scripts]
trace-mcp = "trace_mcp.server:main"
trace-mcp-init = "trace_mcp.init_project:main"

[tool.hatch.build]
# Belt-and-suspenders guard: never ship local working artifacts, private
# notes, crash/debugging handoff dumps, or macOS file-duplication cruft —
# even if one slips past .gitignore. The sdist previously shipped notes/
# (confidential IP/legal material) and a ~4 MB crash-handoff tree to PyPI;
# these excludes plus the explicit sdist allowlist below prevent recurrence.
exclude = [
    "notes",
    "notes/**",
    "*-handoff-*",
    "*-handoff-*/**",
    "audit_*",
    "audit_*/**",
    "review_*",
    "review_*/**",
    "**/* 2.py",
    "**/* 2.md",
    "**/* 2.json",
    "**/*.local.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trace_mcp"]

[tool.hatch.build.targets.sdist]
# Explicit allowlist (default-deny): the sdist ships package source, tests,
# and essential metadata ONLY. Anything not listed here is excluded by
# construction — the safest posture for preventing private-data leaks.
include = [
    "src/trace_mcp/**/*.py",
    "tests/**/*.py",
    "tests/fixtures/**",
    "docs/specification.md",
    "schemas/**",
    "scripts/**",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CHANGELOG.md",
    "pyproject.toml",
]


[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "I",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["trace_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.pyright]
include = ["src"]
exclude = ["tests", "**/__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.coverage.run]
source = ["trace_mcp"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
